--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,12 @@
     <title>LovelyIcon</title>
   </head>
   <body>
+    <script>
+      window.addEventListener('DOMContentLoaded', () => {
+        // Scroll to the top of the page
+        window.scrollTo(0, 0);
+      });
+    </script>
     <div id="root"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body>
